# ocaml-in-python

./: .gitignore  CHANGES.md  README.md  dune-project  ocaml-in-python.opam  ocaml-in-python.opam.template  python3-command.in
api/: dune  ocaml_in_python_api.ml
ocaml/: __init__.py  dune  ocaml_in_python.ml  setup.cfg
tests/aliases/: aliases.py  dune
tests/dict/: dict.ml  dict.py  dune
tests/examples/: dune  examples.ml  examples.py
tests/exceptions/: dune  exceptions.ml  exceptions.py
tests/extension_constructors/: dune  extension_constructors.ml  extension_constructors.py  extension_constructors_3_10.py
tests/irregular/: dune  irregular.ml  irregular.py
tests/nested_modules/: dune  nested_modules.ml  nested_modules.py
tests/simple/: dune  simple.ml  simple.py  simple_3_10.py
tests/stdlib/: dune  stdlib.py
